--- a/src/00-homepage/styles/OfficialCardRow.scss
+++ b/src/00-homepage/styles/OfficialCardRow.scss
@@ -30,21 +30,21 @@ $border-radius-button: 8px;
     .y-forum-head {
         width: 100%;
         height: auto;
-        padding: 10px;
+        padding: 5px;
         overflow: hidden;
-        margin-bottom: 20px;
+        margin-bottom: 0px;
 
         p {
+            width: 65px;
             position: absolute;
-            font-size: 32px;
+            font-size: 14px;
             font-weight: bold;
             color: white;
             letter-spacing: 2px;
-            text-shadow: $text-shadow-lg;
+            text-shadow: 1px 1px 1px $main-blue;
             top: 50%;
             left: 50%;
             transform: translateX(-50%);
-            // transform: translateY(50%);
         }
     }
 
@@ -53,8 +53,8 @@ $border-radius-button: 8px;
 
         img {
             width: 100%;
-            border: $border-lg;
-            border-radius: $border-radius-card;
+            border: $border-sm;
+            border-radius: $border-radius-button;
 
         }
 
@@ -66,7 +66,7 @@ $border-radius-button: 8px;
     
     .y-official-card-wrap {
         // border: 1px solid brown;
-        padding: 10px;
+        padding: 5px;
     
     }
 }
@@ -83,21 +83,16 @@ $border-radius-button: 8px;
             margin-bottom: 10px;
             
             p {
-                position: absolute;
+                width: 180px;
                 font-size: 32px;
-                font-weight: bold;
-                color: white;
-                letter-spacing: 2px;
-                text-shadow: $text-shadow-lg;
-                top: 50%;
-                left: 50%;
-                transform: translateX(-50%);
+                text-shadow: 2px 2px 0 $main-blue;
             }
         }
 
         .y-official-head {
             img {
-    
+                border: $border-lg;
+                border-radius: $border-radius-card;
             }
     
             p {
@@ -106,7 +101,7 @@ $border-radius-button: 8px;
         }
         
         .y-official-card-wrap {
-            // padding: 10px 20px;
+            padding: 10px;
         }
     }
 
