--- a/src/00-homepage/styles/ShopCardRow.scss
+++ b/src/00-homepage/styles/ShopCardRow.scss
@@ -30,21 +30,21 @@ $border-radius-button: 8px;
     .y-forum-head {
         width: 100%;
         height: auto;
-        padding: 10px;
+        padding: 5px;
         overflow: hidden;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
 
         p {
+            width: 65px;
             position: absolute;
-            font-size: 32px;
+            font-size: 14px;
             font-weight: bold;
             color: white;
             letter-spacing: 2px;
-            text-shadow: $text-shadow-lg;
+            text-shadow: 1px 1px 1px $main-blue;
             top: 50%;
             left: 50%;
             transform: translateX(-50%);
-            // transform: translateY(50%);
         }
     }
 
@@ -53,9 +53,8 @@ $border-radius-button: 8px;
 
         img {
             width: 100%;
-            border: $border-lg;
-            border-radius: $border-radius-card;
-
+            border: $border-sm;
+            border-radius: $border-radius-button;
         }
 
         p {
@@ -66,7 +65,7 @@ $border-radius-button: 8px;
     
     .y-shop-card-wrap {
         // border: 1px solid brown;
-        padding: 10px;
+        padding: 5px;
     
     }
 }
@@ -81,22 +80,17 @@ $border-radius-button: 8px;
             overflow: hidden;
             margin-bottom: 10px;
 
-            p {
-                position: absolute;
+            p { 
+                width: 180px;
                 font-size: 32px;
-                font-weight: bold;
-                color: white;
                 text-shadow: 2px 2px 0 $main-blue;
-                top: 50%;
-                left: 50%;
-                transform: translateX(-50%);
-                // transform: translateY(50%);
             }
         }
 
         .y-shop-head {
             img {
-    
+                border: $border-lg;
+                border-radius: $border-radius-card;
             }
     
             p {
