--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -21,6 +21,7 @@ $border-radius-button: 8px;
 
 .y-section-nav {
     width: 100%;
+    max-width: 390px;
     position: fixed;
     z-index: 999;
     top: 0;
