--- a/src/05-member/style/UserProfileTmp.scss
+++ b/src/05-member/style/UserProfileTmp.scss
@@ -124,7 +124,7 @@ $s-padding-top: 100px;
       }
 
       .s-upt-navigation.s-upt-active {
-        left: 0px;
+        // left: 0px;
         width: 100%;
 
         .s-upt-li {
