add handleReduce/ handleEmptyCart

--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -98,7 +98,7 @@ $main-border-radius: 8px;
   .y-section-news {
     width: 100%;
     // background-color: $main-yellow;
-    position: fixed;
+    position: absolute;
     top: 50px;
 
     .y-section-news-first {
