--- a/src/06-event/components/yellow/YellowWave.scss
+++ b/src/06-event/components/yellow/YellowWave.scss
@@ -21,7 +21,7 @@ $wave-height: 40px;
         width: 60%;
         height: 100vh;
         background: {
-            image: url(./../img/wave-1920px.png);
+            image: url(./../../img/wave-1920px.png);
             // repeat: no-repeat;
             position: 46% 0;
             size: 100px 1920px;
