--- a/src/06-event/styles/06-event-00-Render.scss
+++ b/src/06-event/styles/06-event-00-Render.scss
@@ -8,5 +8,6 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      outline: solid red 2px;
     }
   }
