--- a/src/06-event/styles/06-event-03-schedule.scss
+++ b/src/06-event/styles/06-event-03-schedule.scss
@@ -46,6 +46,7 @@ body {
   justify-content: space-between;
 }
 .j-event-middle-schedule {
+  z-index: 99;
   // outline: 1px black solid;
   @include position(47%, 49%);
   @include size(1100px, 900px);
@@ -78,12 +79,15 @@ body {
     margin-top: 30px;
     .j-event-schedule-title {
       width: 100%;
-      height: 180px;
-      background-color: $colorDarkGrey;
+      height: 200px;
+      background-color: $colorList;
       display: flex;
+      align-items: center;
+      border-bottom: 3px $colorLine solid;
       .j-stages-card-1 {
-        width: 20%;
-        height: 80%;
+        width: 18%;
+        height: 65%;
+        margin: 1%;
         background-color: $colorLightBlue;
         display: flex;
         justify-content: center;
@@ -123,8 +127,9 @@ body {
         }
       }
       .j-stages-card-2 {
-        width: 20%;
-        height: 80%;
+        width: 18%;
+        height: 65%;
+        margin: 1%;
         background-color: $colorOrange;
         display: flex;
         justify-content: center;
@@ -164,8 +169,9 @@ body {
         }
       }
       .j-stages-card-3 {
-        width: 20%;
-        height: 80%;
+        width: 18%;
+        height: 65%;
+        margin: 1%;
         background-color: $colorGreen;
         display: flex;
         justify-content: center;
@@ -205,8 +211,9 @@ body {
         }
       }
       .j-stages-card-4 {
-        width: 20%;
-        height: 80%;
+        width: 18%;
+        height: 65%;
+        margin: 1%;
         background-color: $colorPurple;
         display: flex;
         justify-content: center;
@@ -246,8 +253,9 @@ body {
         }
       }
       .j-stages-card-5 {
-        width: 20%;
-        height: 80%;
+        width: 18%;
+        height: 65%;
+        margin: 1%;
         background-color: $colorPink;
         display: flex;
         justify-content: center;
@@ -293,30 +301,37 @@ body {
       background-color: $colorLightGrey;
       display: flex;
       flex-direction: row;
+      // outline: 2px red solid;
+      .j-big-bottom {
+        width: 100%;
+        height: 8%;
+        background-color: $colorList;
+        border-top: 2px solid $colorLine;
+      }
       .j-event-schedule-column-1 {
         width: 20%;
-        height: 1500px;
-        background-color: $colorGreen;
+        height: 100%;
+        background-color: $colorWhite;
       }
       .j-event-schedule-column-2 {
         width: 20%;
-        height: 1500px;
-        background-color: $colorPurple;
+        height: 100%;
+        background-color: $colorWhite;
       }
       .j-event-schedule-column-3 {
         width: 20%;
-        height: 1500px;
-        background-color: $colorLightBlue;
+        height: 100%;
+        background-color: $colorWhite;
       }
       .j-event-schedule-column-4 {
         width: 20%;
-        height: 1500px;
-        background-color: $colorMiddleGrey;
+        height: 100%;
+        background-color: $colorWhite;
       }
       .j-event-schedule-column-5 {
         width: 20%;
-        height: 1500px;
-        background-color: $colorOrange;
+        height: 100%;
+        background-color: $colorWhite;
       }
     }
   }
