--- a/src/05-member/style/profile-pages/Orders.scss
+++ b/src/05-member/style/profile-pages/Orders.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  border: 1px solid red;
+  // border: 1px solid red;
 
   .s-o-title {
     font-size: 30px;
