--- a/src/03-shop/styles/03-shop-m-card.scss
+++ b/src/03-shop/styles/03-shop-m-card.scss
@@ -15,11 +15,14 @@ $card-btn: #80b938;
     width: 33.333333%;
     padding-right: 5px;
     flex-shrink: 0;
+    
     .r-m-card-container {
       border: 3px solid #333;
       display: flex;
       transition: 1s;
+      height: 250px;
       .r-m-card-img {
+        // width: 130px;
         padding: 10px;
         text-align: center;
         display: flex;
@@ -34,7 +37,7 @@ $card-btn: #80b938;
             object-fit: cover;
           }
         }
-        span {
+        .r-m-card-img-span {
           font-size: 16px;
           letter-spacing: 0.2rem;
           color: #fff;
@@ -42,7 +45,7 @@ $card-btn: #80b938;
           background: #f00;
         }
         .r-m-card-body-cates {
-          p {
+          .r-m-card-body-cates-p {
             font-size: 16px;
             color: #000;
             line-height: 2rem;
@@ -55,15 +58,17 @@ $card-btn: #80b938;
       .r-m-card-body {
         width: 70%;
         padding: 10px;
-        
-        h2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        .r-m-card-body-h2 {
           font-size: 20px;
           font-weight: 700;
           color: $main-title;
           padding-bottom: 10px;
           letter-spacing: 0.2rem;
         }
-        p {
+        .r-m-card-body-p {
           font-size: 16px;
           padding-bottom: 5px;
           color: $main-text;
@@ -73,7 +78,7 @@ $card-btn: #80b938;
         .r-m-card-week-btn {
           padding-bottom: 10px;
 
-          small {
+          .r-m-card-week-btn-small {
             font-size: 12px;
             padding: 3px;
             color: $main-text;
@@ -89,7 +94,7 @@ $card-btn: #80b938;
           justify-content: center;
           align-items: center;
           padding-top: 5px;
-          a {
+          .r-m-card-button-a {
             position: relative;
             width: 100%;
             height: 40px;
@@ -107,7 +112,7 @@ $card-btn: #80b938;
             border-radius: 8px;
             overflow: hidden;
             margin-right: 5px;
-            span {
+            .r-m-card-button-span {
               font-size: 18px;
               display: inline-block;
               z-index: 2;
@@ -117,9 +122,9 @@ $card-btn: #80b938;
               font-size: 28px;
               display: inline-block;
               z-index: 2;
-              animation: animateBtn 1s linear infinite;
+              animation: r-m-animateBtn 1s linear infinite;
 
-              @keyframes animateBtn {
+              @keyframes r-m-animateBtn {
                 0% {
                   opacity: 0;
                 }
