--- a/src/03-shop/styles/03-shop-m-card.scss
+++ b/src/03-shop/styles/03-shop-m-card.scss
@@ -170,21 +170,21 @@ $card-btn: #80b938;
         }
       }
     }
-    .r-m-card-container:hover {
-      background-color: $main-Blue;
-      box-shadow: 10px 10px 5px gray;
+    // .r-m-card-container:hover {
+    //   background-color: $main-Blue;
+    //   box-shadow: 10px 10px 5px gray;
 
-      h2 {
-        color: #fff;
-        text-shadow: none;
-      }
-      p {
-        color: #fff;
-      }
-      span {
-        color: #fff;
-      }
-    }
+    //   h2 {
+    //     color: #fff;
+    //     text-shadow: none;
+    //   }
+    //   p {
+    //     color: #fff;
+    //   }
+    //   span {
+    //     color: #fff;
+    //   }
+    // }
   }
 }
 .r-m-card-wrap::-webkit-scrollbar-track {
