--- a/src/04-product/components/style/RecommendCard.scss
+++ b/src/04-product/components/style/RecommendCard.scss
@@ -75,7 +75,7 @@ $main-border-radius: 8px;
     width: 200px;
     height: 200px;
     object-fit: cover;
-    border: 3px solid #113F75;
+    border: 4px solid $secondary-blue;
     border-radius: 8px;
     margin: 20px 20px;
 }
