--- a/src/02-forum/styles/InnerCook.scss
+++ b/src/02-forum/styles/InnerCook.scss
@@ -244,17 +244,33 @@ $p:16px;
         flex-direction: column;
         align-items: center;
         position: fixed;
-        left: 80%;
-        top: 50%;
+        left: 83%;
+        top: 30%;
         .p-checkStep{
-        width: 240px;
+        width: 230px;
         background-color: $main-yellow;
-        border: 3px solid $main-blue;
+        border: 2px solid $main-blue;
+        letter-spacing: 5px;
+        line-height: 300%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+        span{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        input{
+            width: 25px;
+            margin-right: 20px;
+        }
         h3{
             color: $main-blue;
             font-size: $h3;
             font-weight: 800;
+        } 
         }
+    
         }
         .p-writWrap{
             margin-top: 30px;
