--- a/src/02-forum/styles/Recommendation.scss
+++ b/src/02-forum/styles/Recommendation.scss
@@ -33,10 +33,12 @@ $p-m:10px;
     }
     .p-recomText{  
              margin-top: 25px;
+            
         h3{
             color: $main-blue;
             font-size: $h3;
             margin: 0;
+            width: 80%;
         }
         .p-recomMember{
             color: $main-text;
