--- a/src/02-forum/styles/Side_bar.scss
+++ b/src/02-forum/styles/Side_bar.scss
@@ -31,16 +31,7 @@ $main-text:#5C5C5C;
         justify-content: center;
         margin: 15px 0 0 0;
     }
-    .p-activPage{
-        width: 50px;
-        height: 50px;
-        border-radius: 30%;
-        background-color:$main-blue ;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 15px 0 0 0;
-    }
+    
      .p-official{
             width: 80%;
             height: 80%;
@@ -55,6 +46,21 @@ $main-text:#5C5C5C;
     p{
         color: white;
         margin: 10px 0 0 0;
+    }
+    .p-activPage{
+        width: 75px;
+        height: 75px;
+        border-radius: 30%;
+        background-color:none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 15px 0 0 0;
+    }
+    .p-activImg{
+        width: 90%;
+        height: 90%;
+       object-fit:fill;
     }
     }
 .p-btnBook{
