--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -51,6 +51,7 @@ body {
   z-index: 100;
   //   outline: 1px black solid;
   @include position(47%, 49%);
+  position: fixed;
   @include size(1100px, 900px);
   transform: translate(-50%, -50%);
   @media (max-width: 390px) {
