--- a/src/06-event/styles/06-event-05-ticket.scss
+++ b/src/06-event/styles/06-event-05-ticket.scss
@@ -53,6 +53,7 @@ body {
 .j-event-middle-ticket {
     // outline: 1px black solid;
     @include position(47%, 49%);
+    position: fixed;
     @include size(1100px, 900px);
     transform: translate(-50%, -50%);
 
