--- a/src/06-event/components/right/Timetable.scss
+++ b/src/06-event/components/right/Timetable.scss
@@ -23,9 +23,10 @@ $colorLine: #cecece;
   height: $height;
 }
 .j-right-wrap {
-  position: fixed;
+  position: absolute;
   right: 0;
   width: 43%;
+  height: 1700px;
   display: flex;
   @media (max-width: 390px) {
     position: relative;
@@ -34,8 +35,11 @@ $colorLine: #cecece;
     outline: 2px solid red;
   }
   .j-Rwave {
+    position: fixed;
+    right: 15%;
+    height: 100vh;
     margin-right: -2px;
-    width: 65%;
+    width: 40%;
     transform: rotate(180deg);
     @media (max-width: 390px) {
       width: 100%;
@@ -45,31 +49,54 @@ $colorLine: #cecece;
     }
   }
   .j-right {
-    position: relative;
-    @include size(300px, 100vh);
+    position: absolute;
+    right: 0;
+    @include size(300px, 2000px);
     background-color: $colorYellow;
+    // outline: 5px black solid;
     @media (max-width: 390px) {
       @include size(100vw, 1000px);
-      outline: 5px black solid;
+      // outline: 5px black solid;
       // transform: rotate(-90deg);
     }
-    .j-menu {
-      width: 150px;
-      position: absolute;
-      top: 2%;
-      left: 29%;
-      // border: 2px solid red;
-      img {
-        width: 100%;
+    .j-hidebox{
+      z-index: 99;
+      position: fixed;
+      overflow: hidden;
+      width: 300px;
+      height: 300px;
+      background-color: $colorYellow;
+      outline: 2px blue solid;
+      .j-menu {
+        z-index: 199;
+        width: 180px;
+        position: fixed;
+        top: 2%;
+        right: 3%;
+        border: 2px solid red;
+        img {
+          width: 100%;
+        }
+      }
+      .j-side-carrot{
+        width: 80px;
+        position: absolute;
+        top: 40%;
+        right: 40%;
+        outline: solid 2px purple;
+        background-color: $colorBlue;
+        img{
+          width: 100%;
+        }
       }
     }
     .j-table-right {
       // outline: 2px solid red;
       position: absolute;
-      top: 9%;
+      top: 15%;
       left: 8%;
-      width: 270px;
-      height: 1000px;
+      width: 265px;
+      height: 85%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -79,40 +106,54 @@ $colorLine: #cecece;
         justify-content: center;
         align-items: center;
         width: 220px;
-        height: 45px;
-        color: $colorWhite;
-        background-color: $colorBrown;
+        height: 120px;
+        color: $colorBrown;
+        background-color: $colorWhite;
 
-        font-size: 2.6rem;
-        border-radius: 10px;
-        overflow: hidden;
-        border: 4px solid $colorWhite;
+        font-size: 3rem;
+        font-weight: 700;
+        // border-radius: 10px;
+        // overflow: hidden;
+        // border: 4px solid $colorWhite;
       }
       .j-cardG {
         // outline: solid blue 2px;
         // padding: 10%;
         width: 100%;
-        height: 950px;
+        height: 95%;
+        margin-top: 20px;
         .j-tableself {
           margin: auto;
           // outline: 1px solid black;
-          margin-top: 15px;
-          width: 250px;
-          height: 100px;
-          background-color: $colorWhite;
+          margin-top: 12px;
+          width: 230px;
+          height: 155px;
+          // background-color: $colorWhite;
           border-radius: 15px;
           overflow: hidden;
           border: 5px solid $colorWhite;
-          .j-cardtime {
+          .j-cardTop {
             width: 100%;
             height: 35px;
-            font-size: 2rem;
             padding-left: 10px;
-            padding-top: 5px;
+            padding-right: 6px;
+            // padding-top: 5px;
             color: $colorWhite;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .j-cardtime{
+              font-size: 2rem;
+              height: 100%;
+              display: flex;
+              align-items: center;
+            }
+            img{
+
+            }
           }
           .j-cardname {
-            height: 49px;
+            height: 80px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -120,8 +161,14 @@ $colorLine: #cecece;
             padding: 0 10px;
             text-align: center;
             font-size: 2.2rem;
+            font-weight: 500;
             color: $colorWhite;
             border-top: solid 3px $colorWhite;
+          }
+          .j-cardbottom{
+            border-top: solid 3px $colorWhite;
+            width: 100%;
+            height: 35px;
           }
         }
       }
