--- a/src/06-event/components/yellow/YellowWave.scss
+++ b/src/06-event/components/yellow/YellowWave.scss
@@ -26,7 +26,7 @@ $wave-height: 40px;
             position: 46% 0;
             size: 100px 1920px;
         }
-        animation: animate 3.5s linear infinite;
+        animation: jwave 3.5s linear infinite;
         z-index: 100;
         animation-delay: 0.3s;
         @media (max-width: 390px){
@@ -34,7 +34,7 @@ $wave-height: 40px;
             height: 20%;
         }
         
-        @keyframes animate {
+        @keyframes jwave {
             0% {
                 background-position-y: 0px;
             }
